crates/know_now_gen_er/tests/snapshots/snapshots__er_md.snap
---
source: crates/know_now_gen_er/tests/snapshots.rs
assertion_line: 186
expression: stable_content
---
<!-- Generated by know-now. [redacted for snapshot stability] -->

# demo — ER Diagram

```mermaid
erDiagram
    customer {
        integer id PK "Primary key."
        string email "Contact email."
        string name
    }
    order {
        integer id PK
        integer customer_id FK
        decimal total
    }
    order }o--|| customer : "places"
```
